--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="button_name">Click me</string>
     <string name="button_loading">We are loading </string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="glide_download">Glide - Image loading library by BumpTech</string>
+    <string name="loadApp_download">LoadApp - Current repository by Udacity</string>
+    <string name="retrofit_download">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
 </resources>
