--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="glide_download">Glide - Image loading library by BumpTech</string>
     <string name="loadApp_download">LoadApp - Current repository by Udacity</string>
     <string name="retrofit_download">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
+    <string name="glide_download_link">https://github.com/bumptech/glide</string>
+    <string name="loadApp_download_link">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
+    <string name="retrofit_download_link">https://github.com/square/retrofit</string>
+
 </resources>
