--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,7 @@
     <string name="glide_download_link">https://github.com/bumptech/glide</string>
     <string name="loadApp_download_link">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
     <string name="retrofit_download_link">https://github.com/square/retrofit</string>
+    <string name="file">File</string>
+    <string name="status">Status</string>
 
 </resources>
